# soul-transplant

./: .gitignore  README.md  albumlist.example.json  config.default.yaml  pyproject.toml  slskd-clear-searches.py  soul-snatch.py  soul-transplant.py  validate-config.py
src/: app.py  file_catalog.py  file_match.py  file_supplier.py  gazelle_api.py  logger.py  model.py  search.py  shard.py  soul_config.py  utils.py
src/catalogs/: gazelle_catalog.py
src/suppliers/: soulseek.py
test/: conftest.py  test_file_match.py  test_filelist_match.py
